conformance/tests/listenerset-protocol-and-route-kind-conflicts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listener-sets-test-supported-route-kinds
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: gateway-listener
    port: 80
    protocol: HTTP
    hostname: "gateway-listener.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https-conflict
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: tls-validity-checks-certificate
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-test-allowed-routes-supported-kinds
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listener-sets-test-supported-route-kinds
    namespace: gateway-conformance-infra
  listeners:
  - name: listener-set-listener-allowed-routes-tls-only
    port: 443
    protocol: TLS
    hostname: "listener-set-listener-allowed-routes-tls-only.com"
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
    tls:
      mode: Passthrough
  - name: tls-control
    port: 9443
    protocol: TLS
    hostname: abc.example.com
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
  - name: tls-conflict
    port: 8443
    protocol: TLS
    hostname: abc.example.com
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: listenerset-supported-kinds-control
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: listenerset-test-allowed-routes-supported-kinds
    sectionName: tls-control
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - name: tcp-backend
      port: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: listenerset-supported-kinds-conflict
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: listenerset-test-allowed-routes-supported-kinds
    sectionName: tls-conflict
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - name: tcp-backend
      port: 8443
